--- a/bootstrap-learning/portfoligrid/index.html
+++ b/bootstrap-learning/portfoligrid/index.html
@@ -13,6 +13,12 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+      integrity="sha256-HAaDW5o2+LelybUhfuk0Zh2Vdk8Y2W2UeKmbaXhalfA="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Bootstrap Theme</title>
   </head>
@@ -140,6 +146,201 @@
         </div>
       </div>
 
+      <!-- RESUME -->
+      <div id="resume" class="collapse">
+        <div class="card card-body bg-success text-white py-5">
+          <h2>My Resume</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum,
+            odio.
+          </p>
+        </div>
+
+        <div class="card card-body py-5">
+          <h3>Where Have I Worked</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+            aliquid porro explicabo dolorem quaerat expedita?
+          </p>
+          <div class="card-deck">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Devmasters</h4>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                  similique!
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Full Stack Developer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (777) 777-7777
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2015 - 2017</h6>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">123 Designs</h4>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                  similique!
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Designer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (555) 777-7777
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2019 - 2020</h6>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Web Designer Pros</h4>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                  similique!
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Designer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (123) 444-4444
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2010 - 2013</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- WORK -->
+      <div id="work" class="collapse">
+        <div class="card card-body bg-warning text-white py-5">
+          <h2>My Work</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum,
+            odio.
+          </p>
+        </div>
+
+        <div class="card card-body py-5">
+          <h3>What Have I Built?</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Perferendis eum sunt voluptatem, quod cum fugit!
+          </p>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=252"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=252"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=253"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=253"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=254"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=254"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=255"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=255"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=256"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=256"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=257"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=257"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=258"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=258"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=259"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600/768.jpg?image=259"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- FOOTER -->
       <footer id="main-footer" class="p-5 bg-dark text-white">
         <div class="row">
@@ -167,9 +368,20 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
+      integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs="
+      crossorigin="anonymous"
+    ></script>
     <script>
-      // Get the current year of the copyright
-      $("#year").text(new Date().getFullYear());
+      $(".port-item").click(function () {
+        $(".collapse").collapse("hide");
+      });
+
+      $(document).on("click", '[data-toggle="lightbox"]', function (e) {
+        e.preventDefault();
+        $(this).ekkoLightbox();
+      });
     </script>
   </body>
 </html>
