--- a/bootstrap-learning/portfoligrid/index.html
+++ b/bootstrap-learning/portfoligrid/index.html
@@ -341,6 +341,56 @@
         </div>
       </div>
 
+      <!-- CONTACT -->
+      <div id="contact" class="collapse">
+        <div class="card card-body bg-danger text-white py-5">
+          <h2>Contact</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum,
+            odio.
+          </p>
+        </div>
+
+          <div class="card card-body py-5">
+            <h3>Get In Touch</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sit expedita at adipisci! Adipisci, quibusdam.</p>
+            <form>
+              <div class="form-group">
+                <div class="input-group iput-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fas fa-user"></i>
+                    </span>
+                  </div>
+                  <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group iput-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fas fa-envelope"></i>
+                    </span>
+                  </div>
+                  <input type="email" class="form-control bg-dark text-white" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group iput-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fas fa-pencil-alt"></i>
+                    </span>
+                  </div>
+                  <textarea class="form-control bg-dark text-white" placeholder="Message"></textarea>
+                </div>
+              </div>
+
+              <input type="submit" value="Submit" class="btn btn-danger btn-block btn-lg">
+            </form>
+          </div>
+        </div>
+
       <!-- FOOTER -->
       <footer id="main-footer" class="p-5 bg-dark text-white">
         <div class="row">
@@ -351,7 +401,6 @@
           </div>
         </div>
       </footer>
-    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
