--- a/Tracalorie/index.html
+++ b/Tracalorie/index.html
@@ -102,5 +102,6 @@
       src="https://kit.fontawesome.com/d192b27ae5.js"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
