--- a/Tracalorie/index.html
+++ b/Tracalorie/index.html
@@ -74,19 +74,19 @@
         <!-- <li class="collection-item" id="item-0">
           <strong>Steak Dinner: </strong> <em>1200 Calories</em>
           <a href="#" class="secondary-content">
-            <i class="fa fa-pencil"></i>
+            <i class="edit-item fa fa-pencil"></i>
           </a>
         </li>
         <li class="collection-item" id="item-0">
           <strong>Cookie Dinner: </strong> <em>400 Calories</em>
           <a href="#" class="secondary-content">
-            <i class="fa fa-pencil"></i>
+            <i class="edit-item fa fa-pencil"></i>
           </a>
         </li>
         <li class="collection-item" id="item-0">
           <strong>Eggs: </strong> <em>500 Calories</em>
           <a href="#" class="secondary-content">
-            <i class="fa fa-pencil"></i>
+            <i class="edit-item fa fa-pencil"></i>
           </a>
         </li> -->
       </ul>
