--- a/Tracalorie/index.html
+++ b/Tracalorie/index.html
@@ -40,7 +40,7 @@
               </div>
               <div class="input-field col s6">
                 <input
-                  type="text"
+                  type="number"
                   placeholder="Add calorie"
                   id="item-calories"
                 />
